--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </div>
         <div class="project-links">
           <a href="https://github.com/yourusername/personal-portfolio" target="_blank"><i class="fab fa-github"></i> Code</a>
-          <a href="https://yourusername.github.io/personal-portfolio/" target="_blank"><i class="fas fa-external-link-alt"></i> Live</a>
+          <a href="https://shivamprajapaticodes.github.io/Shivam-Portfolio/" target="_blank"><i class="fas fa-external-link-alt"></i> Live</a>
         </div>
       </div>
 
@@ -151,7 +151,7 @@
 
         <h3 class="social-heading">Quick Connect</h3>
         <div class="social-icons">
-          <a href="https://github.com/shivamgithub" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://github.com/shivamprajapaticodes" target="_blank"><i class="fab fa-github"></i></a>
           <a href="https://www.linkedin.com/in/shivam-prajapati-9985bb371?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B4ruPzsKgRnOYjBjsSVj4ww%3D%3D" target="_blank"><i class="fab fa-linkedin"></i></a>
           <a href="mailto:shivamprajapatiofficial870@gmail.com"><i class="fas fa-envelope"></i></a>
           <a href="https://www.instagram.com/cute_dancer_shivam?igsh=empoandqNXQ4bXAx" target="_blank"><i class="fab fa-instagram"></i></a>
