--- a/index.html
+++ b/index.html
@@ -85,8 +85,10 @@
       <p style="font-size: 0.9em; color: #666;">Projects that demonstrate my skills and creativity in frontend development.</p>
 <div class="project" data-aos="zoom-in">
   <h3><i class="fas fa-code"></i> Amazon Clone</h3>
-  <p>A basic layout clone of Amazon built using HTML and CSS to replicate its homepage UI.</p>
-
+ <p>
+    A responsive clone of the Amazon homepage built using HTML & CSS.  
+    Developed under the guidance of <strong>Sharadha Khapra ma'am</strong> from <em>Apna College</em>.
+  </p>
   <div class="project-details">
     <span class="project-tech">HTML</span>
     <span class="project-tech">CSS</span>
