--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
   </div>
 
   <div class="project-links">
-    <a href="https://github.com/shivamgithub/amazon-clone" target="_blank">
+    <a href="https://github.com/shivamprajapaticodes/Amazon-clone.git" target="_blank">
       <i class="fab fa-github"></i> Code
     </a>
-    <a href="https://shivamgithub.github.io/amazon-clone/" target="_blank">
+    <a href="https://shivamprajapaticodes.github.io/Amazon-clone/" target="_blank">
       <i class="fas fa-external-link-alt"></i> Live
     </a>
   </div>
@@ -114,8 +114,8 @@
           <span class="project-tech">JavaScript</span>
         </div>
         <div class="project-links">
-          <a href="https://github.com/yourusername/personal-portfolio" target="_blank"><i class="fab fa-github"></i> Code</a>
-          <a href="https://shivamprajapaticodes.github.io/Shivam-Portfolio/" target="_blank"><i class="fas fa-external-link-alt"></i> Live</a>
+          <a href="https://github.com/shivamprajapaticodes/Shivam-portfolio.git" target="_blank"><i class="fab fa-github"></i> Code</a>
+          <a href="https://shivamprajapaticodes.github.io/Shivam-portfolio/" target="_blank"><i class="fas fa-external-link-alt"></i> Live</a>
         </div>
       </div>
 
