🔗 Updated Amazon clone project links

--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
   </div>
 
   <div class="project-links">
-    <a href="https://github.com/shivamprajapaticodes/Amazon-clone.git" target="_blank">
+    <a href="https://github.com/shivamprajapaticodes/ecommerce-homepage-clone.git" target="_blank">
       <i class="fab fa-github"></i> Code
     </a>
-    <a href="https://shivamprajapaticodes.github.io/Amazon-clone/" target="_blank">
+    <a href="https://shivamprajapaticodes.github.io/ecommerce-homepage-clone/" target="_blank">
       <i class="fas fa-external-link-alt"></i> Live
     </a>
   </div>
